fix(style): Improve footer spacing

--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,7 @@ h3, h4, h5, h6 {
 }
 
 footer {
+  padding: 1rem 0;
   text-align: center;
   font-size: 0.75rem;
   color: #555;
